blog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: blog
  sessionAffinity: None
  type: ClusterIP
